# mapping_agent

./: .gitignore  app.py  pyproject.toml  readme.md
examples/: app.py
mapping_agent/agents/: category_identification_agent.py  column_mapping_agent.py
mapping_agent/config/: prompt_config.json  standard_columns_config.json
mapping_agent/utils/: custom_data_loader.py
mapping_agent/views/: streamlit_views.py
test/data/: main_usage_data.csv  support_data.csv
