[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfn-mapping-agent"
version = "0.1.0"
authors = [
  { name="StepFN AI" },
]
description = "A mapping agent for data column categorization and mapping"
readme = "readme.md"

requires-python = ">=3.9, <3.12"
dependencies = [
    "sfn-blueprint==0.5.2",
    "sfn-llm-client==0.1.0",
]

[project.urls]
Homepage = "https://github.com/stepfnAI/mapping_agent"

[tool.hatch.build.targets.wheel]
packages = ["mapping_agent"]